istio/traffic/circuit-breaking/se.yaml
# config outboundTrafficPolicy
# outboundTrafficPolicy:
#   mode: REGISTRY_ONLY
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc
spec:
  hosts:
  - www.github.com
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: http
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: github-com-route
spec:
  hosts:
  - www.github.com
  http:
  - route:
    - destination:
        host: www.github.com
    fault:
      abort:
        percentage:
          value: 100
        httpStatus: 400
